@@ -1,4 +1,2 @@
 -Xmx2048m -Xms1024m
 -Dfile.encoding=utf-8
---add-opens=java.base/java.lang=ALL-UNNAMED
---add-opens=java.base/java.io=ALL-UNNAMED
